[package]
name = "simgps"
version = "0.1.1"
edition = "2021"
description = "iOS Simulator GPS CLI tool"
homepage = "https://github.com/aovoq/simgps"
repository = "https://github.com/aovoq/simgps"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
