[package]
name = "simgps"
version = "0.1.1"
edition = "2021"
description = "iOS Simulator GPS CLI tool"
license = "MIT"
homepage = "https://github.com/aovoq/simgps"
repository = "https://github.com/aovoq/simgps"
keywords = ["ios", "simulator", "gps", "cli", "macos"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
